trigger event done

--- a/order/.env
+++ b/order/.env
@@ -4,3 +4,15 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=123
 POSTGRES_DATABASE=demo
 PORT=5000
+
+# mail
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=minzwoo123@gmail.com
+MAIL_PASSWORD=zrrkcvujcigzwfgy
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=minzwoo123@gmail.com
+MAIL_FROM=${MAIL_USER}
+
+# optional
+MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
